<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DataBaseExample</string>
    <string name="instrucciones">Escribe un nombre de persona para buscar su significado y origen:</string>
    <string name="action_settings">Settings</string>
    <string name="significado">Significado:</string>
    <string name="origen">Origen:</string>
    <string name="nombre">introduce un nombre</string>
    <string name="origen1">origen</string>
    <string name="significado1">significado</string>

</resources>
